--- a/sereda.html
+++ b/sereda.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Розклад уроків</title>
+    <title>середа</title>
 </head>
 <body>
-    <a href="ponedilok.html">понеділок</a>
+    
 </body>
 </html>
