--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Розклад уроків</title>
 </head>
 <body>
-    <a href="ponedilok.html">понеділок</a>
+    <a href="ponedilok.html">Понеділок</a>
+    <a href="vivtorok.html">Вівторок</a>
+    <a herf="sereda.html">Середа</a>
+    <a href="chetver.html">Четвер</a>
+    <a href="pyatnicha.html">П'ятниця</a>
 </body>
 </html>
