--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <a href="ponedilok.html">Понеділок</a>
     <a href="vivtorok.html">Вівторок</a>
-    <a herf="sereda.html">Середа</a>
+    <a href="sereda.html">Середа</a>
     <a href="chetver.html">Четвер</a>
     <a href="pyatnicha.html">П'ятниця</a>
 </body>
