--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: 500;
-  color: #000;
-  background-color: #fff;
+  color: rgb(30, 255, 0);
+  background-color: rgb(255, 255, 255);
   border: none;
   border-radius: 45px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
@@ -35,7 +35,7 @@ button:active {
 }
 </style>
 
-<body>
+<body text="yellow" bgcolor="blue">
     <a href="ponedilok.html" class="baba">Понеділок</a>
     <a href="vivtorok.html" class="baba">Вівторок</a>
     <a href="sereda.html" class="baba">Середа</a>
